<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="instructions">Instructions</string>
    <string name="welcomeFrag">Welcome!</string>
    <string name="login_successful_n_non_the_next_screen_you_will_find_instructions_on_how_to_operate_this_app">Login successful!\n\nOn the next screen you will find instructions on how to operate this app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="access_shoe_list">Access Shoe List</string>
    <string name="page_title">Page Title</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="save">save</string>
    <string name="more">more</string>
    <string name="search">search</string>
    <string name="logout">logout</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="favorite">favorite</string>
    <string name="content_description_search">content_description_search</string>
    <string name="content_description_more">content_description_more</string>
    <string name="content_description_logout">content_description_logout</string>
    <string name="content_description_editShoeName" />
    <string name="help">Help</string>
    <string name="shoeView1">TextView</string>
    <string name="fabShoeList">TODO</string>
    <string name="textInstruction2">This app allows you to view the list of shoes in the store and you are able to list your own shoes.\n\nDetails should as company, name, shoe size, and description are required.</string>
    <string name="ex_oxford">Ex: Oxford</string>
    <string name="ex_kenneth_cole">Ex: Kenneth Cole</string>
    <string name="ex_10">Ex: 10</string>
    <string name="ex_brown_color_slip_on">Ex: Brown color, slip-on</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
