<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logout"
        android:contentDescription="@string/content_description_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:contentDescription="@string/content_description_more"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/more"
        app:showAsAction="never" />
</menu>