<?xml version="1.0" encoding="utf-8"?>

 <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ShoeListViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ShoeDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoeDetailFragment">

    <TextView
        android:id="@+id/shoeDetailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/shoe_details"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editShoeName"
        android:text="@={shoe.name}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/content_description_editShoeName"
        android:ems="10"
        android:hint="@string/ex_oxford"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editShoeCompany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editShoeCompany"
        android:text="@={shoe.company}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/ex_kenneth_cole"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editShoeSize"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editShoeSize"
        android:text="@={shoe.size}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/ex_10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sizeView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editShoeDescription"
        android:text="@={shoe.description}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="179dp"
        android:ems="10"
        android:hint="@string/ex_brown_color_slip_on"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editShoeName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/companyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/company"
        app:layout_constraintBaseline_toBaselineOf="@+id/editShoeCompany"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sizeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="302dp"
        android:text="@string/size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameView"
        app:layout_constraintStart_toStartOf="@+id/descriptionView" />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="@string/description"
        app:layout_constraintBaseline_toBaselineOf="@+id/editShoeDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelShoeChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#C62828"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveShoeChanges"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveShoeChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/save"
        android:onClick="@{() -> ShoeListViewModel.addShoe(shoe)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelShoeChanges" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>